--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1719,8 +1719,8 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
          # get module position in loaded list to remove corresponding loaded
          # modulefile (entry at same position in _LMFILES_)
          # need the unfiltered loaded module list to get correct index
-         set lmidx [lsearch -exact [getEnvLoadedModulePropertyParsedList name\
-            0] $modname]
+         set lmidx [lsearch -exact [getEnvLoadedModulePropertyList name]\
+            $modname]
          remove-path LOADEDMODULES $modname
          remove-path --index _LMFILES_ $lmidx
          # update cache arrays
