Rename serializeModulePropertyValue in serialize1LvlModulePropertyValue

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1794,11 +1794,11 @@ proc serialize2LvlModulePropertyValue {mod structured_value_list\
       lappend serialized_value_list [join $mapped_structured_value $sub2_sepa]
    }
    # no character translation as it already occurred here
-   return [serializeModulePropertyValue $mod $serialized_value_list {}]
+   return [serialize1LvlModulePropertyValue $mod $serialized_value_list {}]
 }
 
-proc serializeModulePropertyValue {mod structured_value_list {char_map_list\
-   {: <}}} {
+proc serialize1LvlModulePropertyValue {mod structured_value_list\
+   {char_map_list {: <}}} {
    if {[llength $structured_value_list]} {
       set serialized_value [join [list $mod {*}$structured_value_list]\
          [getState sub1_separator]]
