--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1336,8 +1336,8 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
 
          # register declared conflict in environment
          if {[llength [set mod_conflict_list [getLoadedConflict $modname]]]} {
-            append-path __MODULES_LMCONFLICT [serializeModulePropertyValue\
-               $modname $mod_conflict_list]
+            append-path __MODULES_LMCONFLICT\
+               [serialize1LvlModulePropertyValue $modname $mod_conflict_list]
          }
 
          # declare the prereq of this module
@@ -1362,12 +1362,12 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          # declare the tags of this module
          if {[llength [set mod_tag_list [getExportTagList $modnamevr\
             $modfile]]]} {
-            append-path __MODULES_LMTAG [serializeModulePropertyValue\
+            append-path __MODULES_LMTAG [serialize1LvlModulePropertyValue\
                $modname $mod_tag_list]
          }
          if {[llength [set mod_tag_list [getExtraTagList $modnamevr]]]} {
-            append-path __MODULES_LMEXTRATAG [serializeModulePropertyValue\
-               $modname $mod_tag_list]
+            append-path __MODULES_LMEXTRATAG\
+               [serialize1LvlModulePropertyValue $modname $mod_tag_list]
          }
          if {[llength [set mod_stickyrule_list [getStickyRuleList $modnamevr\
             $modfile]]]} {
@@ -2853,12 +2853,12 @@ proc cmdModuleTag {unset_extra uasked tag_list args} {
          # set the new tag set for module on LM env var
          lappendState mode load
          if {[llength [set mod_tag_list [getExportTagList $modnamevr]]]} {
-            append-path __MODULES_LMTAG [serializeModulePropertyValue\
+            append-path __MODULES_LMTAG [serialize1LvlModulePropertyValue\
                $modname $mod_tag_list]
          }
          if {[llength [set mod_tag_list [getExtraTagList $modnamevr]]]} {
-            append-path __MODULES_LMEXTRATAG [serializeModulePropertyValue\
-               $modname $mod_tag_list]
+            append-path __MODULES_LMEXTRATAG\
+               [serialize1LvlModulePropertyValue $modname $mod_tag_list]
          }
          lpopState mode
 
