serialize1LvlModulePropertyValue value arg is never empty

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1831,13 +1831,9 @@ proc serialize2LvlModulePropertyValue {mod structured_value_list\
 
 proc serialize1LvlModulePropertyValue {mod structured_value_list\
    char_map_list} {
-   if {[llength $structured_value_list]} {
-      set serialized_value [join [list $mod {*}$structured_value_list]\
-         [getState sub1_separator]]
-      set ret [string map $char_map_list $serialized_value]
-   } else {
-      set ret {}
-   }
+   set serialized_value [join [list $mod {*}$structured_value_list] [getState\
+      sub1_separator]]
+   set ret [string map $char_map_list $serialized_value]
    return $ret
 }
 
