Silently ignore incompatible cache file
Rather than raising an error when a cache file is made for a greater
Modules version, ignore it silently.

This change helps to have different version of the Modules tool deployed
on the same site.

Fixes #515

--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -221,8 +221,8 @@ proc readCacheContent {cachefile} {
             {Cache ERROR}
       # check if min version requirement is met
       } elseif {[versioncmp {@MODULES_RELEASE@} $fhvers] <0} {
-         reportInternalBug "Cache file requires at least Modules version\
-            $fhvers" $cachefile {Cache ERROR}
+         reportDebug "Cache file $cachefile requires at least Modules version\
+            $fhvers"
       } else {
          # set file content as result
          set res $fdata
