Split mfinterp.tcl.in file into interp.tcl.in + mfcmd.tcl

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 /tcl/envmngt.tcl
 /tcl/init.tcl
 /tcl/main.tcl
-/tcl/mfinterp.tcl
+/tcl/interp.tcl
 /tcl/modfind.tcl
 /tcl/report.tcl
 /tcl/subcmd.tcl
